[gd_scene load_steps=3 format=3 uid="uid://pi6mkvsjbu2a"]

[ext_resource type="Script" uid="uid://cab0cih7i8b2o" path="res://scripts/test.gd" id="1_bl13t"]
[ext_resource type="PackedScene" uid="uid://c2suh5bep8hj3" path="res://scenes/agent.tscn" id="2_iyx0m"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 1154.0
offset_bottom = 645.0
script = ExtResource("1_bl13t")

[node name="Agent" parent="." instance=ExtResource("2_iyx0m")]

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 105.0
offset_top = 26.0
offset_right = 113.0
offset_bottom = 34.0

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 93.0
offset_top = -108.0
offset_right = 188.0
offset_bottom = -42.0

[node name="ChatDisplay" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = -1.0
offset_top = 202.0
offset_right = 1150.0
offset_bottom = 302.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 9.0
offset_right = 1150.0
offset_bottom = 652.0

[node name="InputField" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="SendButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
